// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`figmaTheme/getFigmaTheme errors throws when a $meta file cannot be found 1`] = `"No $meta file found"`;

exports[`figmaTheme/getFigmaTheme errors throws when a $theme file cannot be found 1`] = `"No $theme file found"`;

exports[`figmaTheme/getFigmaTheme errors throws when all partials are disabled for a theme 1`] = `"No enabled partials found for this theme theme4. Check the $theme file for this theme."`;

exports[`figmaTheme/getFigmaTheme errors throws when there is no theme data for supplied theme 1`] = `"No data found for theme theme4. This theme may not exist."`;

exports[`figmaTheme/getFigmaTheme gets a figma theme from a files object 1`] = `
{
  "colors": {
    "black": {
      "type": "color",
      "value": "#000000",
    },
    "brand": {
      "green": {
        "type": "color",
        "value": "#219653",
      },
      "orange": {
        "type": "color",
        "value": "orange",
      },
      "purple": {
        "type": "color",
        "value": "#6f53f9",
      },
      "red": {
        "type": "color",
        "value": "#eb5757",
      },
      "teal": {
        "type": "color",
        "value": "#31839b",
      },
    },
    "grey": {
      "00": {
        "type": "color",
        "value": "#07131f",
      },
      "01": {
        "type": "color",
        "value": "#6a6e80",
      },
      "02": {
        "type": "color",
        "value": "#949494",
      },
      "03": {
        "type": "color",
        "value": "#b5b5b5",
      },
      "08": {
        "type": "color",
        "value": "#f4f4f4",
      },
      "09": {
        "type": "color",
        "value": "grey",
      },
      "10": {
        "type": "color",
        "value": "#f9f9f9",
      },
    },
    "theme": {
      "primary": {
        "type": "color",
        "value": "{colors.brand.grey}",
      },
      "secondary": {
        "type": "color",
        "value": "{colors.brand.teal}",
      },
      "tertiary": {
        "type": "color",
        "value": "{colors.brand.red}",
      },
    },
    "white": {
      "type": "color",
      "value": "#ffffff",
    },
  },
}
`;

exports[`figmaTheme/getFigmaTheme gets a figma theme from a files object 2`] = `
{
  "colors": {
    "black": {
      "type": "color",
      "value": "#000000",
    },
    "brand": {
      "green": {
        "type": "color",
        "value": "#219653",
      },
      "orange": {
        "type": "color",
        "value": "orange",
      },
      "purple": {
        "type": "color",
        "value": "#6f53f9",
      },
      "red": {
        "type": "color",
        "value": "#eb5757",
      },
      "teal": {
        "type": "color",
        "value": "#31839b",
      },
    },
    "grey": {
      "00": {
        "type": "color",
        "value": "#07131f",
      },
      "01": {
        "type": "color",
        "value": "#6a6e80",
      },
      "02": {
        "type": "color",
        "value": "#949494",
      },
      "03": {
        "type": "color",
        "value": "#b5b5b5",
      },
      "08": {
        "type": "color",
        "value": "#f4f4f4",
      },
      "09": {
        "type": "color",
        "value": "grey",
      },
      "10": {
        "type": "color",
        "value": "#f9f9f9",
      },
    },
    "theme": {
      "primary": {
        "type": "color",
        "value": "{colors.brand.grey}",
      },
      "secondary": {
        "type": "color",
        "value": "{colors.brand.teal}",
      },
      "tertiary": {
        "type": "color",
        "value": "{colors.brand.red}",
      },
    },
    "white": {
      "type": "color",
      "value": "#ffffff",
    },
  },
}
`;

exports[`figmaTheme/getFigmaTheme gets a figma theme from a files object with folders 1`] = `
{
  "colors": {
    "black": {
      "type": "color",
      "value": "#000000",
    },
    "brand": {
      "green": {
        "type": "color",
        "value": "#219653",
      },
      "orange": {
        "type": "color",
        "value": "orange",
      },
      "purple": {
        "type": "color",
        "value": "#6f53f9",
      },
      "red": {
        "type": "color",
        "value": "#eb5757",
      },
      "teal": {
        "type": "color",
        "value": "#31839b",
      },
    },
    "grey": {
      "00": {
        "type": "color",
        "value": "#07131f",
      },
      "01": {
        "type": "color",
        "value": "#6a6e80",
      },
      "02": {
        "type": "color",
        "value": "#949494",
      },
      "03": {
        "type": "color",
        "value": "#b5b5b5",
      },
      "08": {
        "type": "color",
        "value": "#f4f4f4",
      },
      "09": {
        "type": "color",
        "value": "grey",
      },
      "10": {
        "type": "color",
        "value": "#f9f9f9",
      },
    },
    "theme": {
      "primary": {
        "type": "color",
        "value": "{colors.brand.grey}",
      },
      "secondary": {
        "type": "color",
        "value": "{colors.brand.teal}",
      },
      "tertiary": {
        "type": "color",
        "value": "{colors.brand.red}",
      },
    },
    "white": {
      "type": "color",
      "value": "#ffffff",
    },
  },
  "spacing": {
    "default": {
      "type": "spacing",
      "value": "2",
    },
  },
}
`;

exports[`figmaTheme/getFigmaTheme gets a figma theme from a files object with folders 2`] = `
{
  "colors": {
    "black": {
      "type": "color",
      "value": "#000000",
    },
    "brand": {
      "green": {
        "type": "color",
        "value": "#219653",
      },
      "orange": {
        "type": "color",
        "value": "orange",
      },
      "purple": {
        "type": "color",
        "value": "#6f53f9",
      },
      "red": {
        "type": "color",
        "value": "#eb5757",
      },
      "teal": {
        "type": "color",
        "value": "#31839b",
      },
    },
    "grey": {
      "00": {
        "type": "color",
        "value": "#07131f",
      },
      "01": {
        "type": "color",
        "value": "#6a6e80",
      },
      "02": {
        "type": "color",
        "value": "#949494",
      },
      "03": {
        "type": "color",
        "value": "#b5b5b5",
      },
      "08": {
        "type": "color",
        "value": "#f4f4f4",
      },
      "09": {
        "type": "color",
        "value": "grey",
      },
      "10": {
        "type": "color",
        "value": "#f9f9f9",
      },
    },
    "theme": {
      "primary": {
        "type": "color",
        "value": "{colors.brand.grey}",
      },
      "secondary": {
        "type": "color",
        "value": "{colors.brand.teal}",
      },
      "tertiary": {
        "type": "color",
        "value": "{colors.brand.red}",
      },
    },
    "white": {
      "type": "color",
      "value": "#ffffff",
    },
  },
  "spacing": {
    "default": {
      "type": "spacing",
      "value": "2",
    },
  },
}
`;

exports[`figmaTheme/getFigmaTheme gets a second figma theme from a files object 1`] = `
{
  "colors": {
    "black": {
      "type": "color",
      "value": "#000000",
    },
    "brand": {
      "green": {
        "type": "color",
        "value": "#219653",
      },
      "orange": {
        "type": "color",
        "value": "purple",
      },
      "purple": {
        "type": "color",
        "value": "#6f53f9",
      },
      "red": {
        "type": "color",
        "value": "#eb5757",
      },
      "teal": {
        "type": "color",
        "value": "#31839b",
      },
    },
    "grey": {
      "00": {
        "type": "color",
        "value": "#07131f",
      },
      "01": {
        "type": "color",
        "value": "#6a6e80",
      },
      "02": {
        "type": "color",
        "value": "#949494",
      },
      "03": {
        "type": "color",
        "value": "#b5b5b5",
      },
      "08": {
        "type": "color",
        "value": "#f4f4f4",
      },
      "09": {
        "type": "color",
        "value": "#f6f6f6",
      },
      "10": {
        "type": "color",
        "value": "#f9f9f9",
      },
    },
    "theme": {
      "primary": {
        "type": "color",
        "value": "{colors.brand.black}",
      },
      "secondary": {
        "type": "color",
        "value": "{colors.brand.teal}",
      },
      "tertiary": {
        "type": "color",
        "value": "{colors.brand.red}",
      },
    },
    "white": {
      "type": "color",
      "value": "#ffffff",
    },
  },
}
`;

exports[`figmaTheme/getFigmaTheme gets a second figma theme from a files object 2`] = `
{
  "colors": {
    "black": {
      "type": "color",
      "value": "#000000",
    },
    "brand": {
      "green": {
        "type": "color",
        "value": "#219653",
      },
      "orange": {
        "type": "color",
        "value": "purple",
      },
      "purple": {
        "type": "color",
        "value": "#6f53f9",
      },
      "red": {
        "type": "color",
        "value": "#eb5757",
      },
      "teal": {
        "type": "color",
        "value": "#31839b",
      },
    },
    "grey": {
      "00": {
        "type": "color",
        "value": "#07131f",
      },
      "01": {
        "type": "color",
        "value": "#6a6e80",
      },
      "02": {
        "type": "color",
        "value": "#949494",
      },
      "03": {
        "type": "color",
        "value": "#b5b5b5",
      },
      "08": {
        "type": "color",
        "value": "#f4f4f4",
      },
      "09": {
        "type": "color",
        "value": "#f6f6f6",
      },
      "10": {
        "type": "color",
        "value": "#f9f9f9",
      },
    },
    "theme": {
      "primary": {
        "type": "color",
        "value": "{colors.brand.black}",
      },
      "secondary": {
        "type": "color",
        "value": "{colors.brand.teal}",
      },
      "tertiary": {
        "type": "color",
        "value": "{colors.brand.red}",
      },
    },
    "white": {
      "type": "color",
      "value": "#ffffff",
    },
  },
}
`;

exports[`figmaTheme/getFigmaThemeNames errors throws when a $theme file cannot be found 1`] = `"No $theme file found"`;

exports[`figmaTheme/getFigmaThemeNames gets figma theme names from a files object 1`] = `
[
  "theme1",
  "theme2",
]
`;
